[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Textures/Entities/Enemies/chaser.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Entities/Enemies/Chaser.gd" type="Script" id=2]
[ext_resource path="res://Resources/Audio/FX/EnemyDamage.wav" type="AudioStream" id=3]

[sub_resource type="OccluderPolygon2D" id=1]
cull_mode = 1
polygon = PoolVector2Array( 0, -31.3333, 41, 30, -41, 30 )

[node name="Chaser" type="KinematicBody2D"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1.5, 1 )
collision_layer = 2
collision_mask = 91
script = ExtResource( 2 )
base_speed = 40

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( 1, -46, 42, 46, -43, 46 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.678431, 0.678431, 0.678431, 1 )
rotation = 1.5708
scale = Vector2( 1, 1.5 )
texture = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
rotation = 1.5708
scale = Vector2( 1, 1.5 )
occluder = SubResource( 1 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
